48
================

25/09/23 Unified upload document template button for HTML or ODT #1315
25/09/23 Allow licence renew flag to be manually updated if no animal set #728
24/09/23 system log message refactoring to fix re bug
22/09/23 Automated emails for adopter followup, licence/clinic reminders #1322
21/09/23 Revert button for online form/report header/footer editing #1330
21/09/23 Fix for boarding shelter animals not appearing in location/unit mode
21/09/23 Add BondedMicrochips wordkey 
20/09/23 type hints, publisher package, main and cron #1320
20/09/23 adoptable_js: site dropdown/filter
19/09/23 type hints, publisher package upto homeagain #1320
19/09/23 type hints, paymentprocessor package #1320
19/09/23 type hints, dbms package #1320
19/09/23 type hints, waitinglist, wordprocessor #1320
19/09/23 Fix CC and BCC tokens in email templates for adoption checkout
18/09/23 Disable autolink plugin for document templates
18/09/23 type hints, users, utils #1320
18/09/23 type hints, service, sitedefs, smcom, stock, template #1320
18/09/23 type hints, onlineform, person, publish, reports, search #1320
18/09/23 Allow choice of day to send the weekly fosterer email #1191
18/09/23 Include default medical profiles for exams and surgeries #946
18/09/23 Fix layout bug to fosterer mode introduced by #1290
17/09/23 Use outer join from waitinglist to species in case of broken forms
15/09/23 Audit unit changes #1290
15/09/23 Online forms: remember previously processed forms between reloads
15/09/23 Daily observations: Show location counts and hide empty locations #489
15/09/23 Clear button for reserve/sponsor, option to turn it off #1290
14/09/23 Use a dedicated reserve/sponsor unit permission #1290
14/09/23 Show reserved units in the add/edit animal unit list #1290
13/09/23 Add UNITSPONSOR attribute to animal data with matching wordkey
13/09/23 Allow units within a location to be reserved and sponsored #1290