@@ -18,8 +18,8 @@ $(function() {
                 fields: [
                     { json_field: "NAME", post_field: "name", label: _("Name"), type: "text", validation: "notblank" },
                     { json_field: "DESCRIPTION", post_field: "description", label: _("Description"), type: "textarea" },
-                    { json_field: "", post_field: "quantity", label: _("Quantity"), type: "intnumber", validation: "notblank", defaultval: "1", readonly: true, 
-                        callout: _("The number of stock records to create") },
+                    { json_field: "", post_field: "quantity", label: _("Quantity"), type: "intnumber", validation: "notblank", 
+                        defaultval: "1", min: 1, max: 100, readonly: true, callout: _("The number of stock records to create (containers)") },
                     { json_field: "STOCKLOCATIONID", post_field: "location", label: _("Location"), type: "select", 
                         options: { displayfield: "LOCATIONNAME", valuefield: "ID", rows: controller.stocklocations }},
                     { json_field: "UNITNAME", post_field: "unitname", label: _("Units"), type: "text", validation: "notblank",
