@@ -1,6 +1,7 @@
 48
 ================
 
+26/09/23 Restrict new stock records to creating a max of 100 level records
 25/09/23 Unified upload document template button for HTML or ODT #1315
 25/09/23 Allow licence renew flag to be manually updated if no animal set #728
 24/09/23 system log message refactoring to fix re bug
